--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Page Title</title>
+    </head>
+    <body>
+        <div class="center">
+            <div class="loader">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>     
+                <span></span>
+                <span></span>
+                <span></span>
+                      
+            </div>
+             <h3>Loading...</h3>
+        </div>
+        <a class="link-4" href="https://www.youtube.com/@CodebySkm555"><div class="link">Subscribe my YT channel
+</div></a> 
+    </body>
+</html>
+
+
+
+
 
